--- a/src/main/webapp/view/config.xhtml
+++ b/src/main/webapp/view/config.xhtml
@@ -151,6 +151,37 @@
 				    </div>
 				  </div>
 				</div>
+
+				<!-- Change B3 negotiation code -->
+                <div class="col-lg-6">
+				  <div class="panel panel-black">
+				    <div class="panel-heading">
+				      <h4 class="panel-title">
+				        <a data-toggle="collapse" href="#collapseCN" class="panel-title">
+				          <h:outputText value="#{msg['app.config.company.change.ticker.title']}"/>
+				        </a>
+				      </h4>
+				    </div>
+				    <div id="collapseCN" class="panel-collapse collapse out">
+				      <div class="panel-body">
+				      	<p:outputPanel id="cgNegotiationContent" deferred="true">
+					      	<h:panelGrid columns="2" cellspacing="5">
+						        <p:outputLabel value="#{msg['app.config.company.change.ticker.old']}:" for="oldTicker" />
+						        <p:autoComplete id="oldTicker" minQueryLength="3" value="#{configView.oldTicker}"
+						        			 completeMethod="#{chartView.completeStock}" effect="fade" />
+	
+						        <p:outputLabel value="#{msg['app.config.company.change.ticker.new']}:" for="newTicker" />
+						        <p:inputText id="newTicker" value="#{configView.newTicker}" />
+
+								<p:commandButton value="#{msg['btn.update']}" actionListener="#{configView.changeNegotiationCode}" update=":form:cgNegotiationContent"/>
+					      	</h:panelGrid>
+
+				      	</p:outputPanel>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
 				<!-- User Config -->
                 <div class="col-lg-12">
 				  <div class="panel panel-primary">
